		 Renamed to lowercase C++ API methods
		 Removed xta::Transaction.Open
		 Removed xta::Transaction.Close
		 Renamed to lowercase Python API methods
		 Removed Transaction.Open
		 Removed Transaction.Close
		 *** WARNING: ***
		 This release breaks compatibility with previous versions of
		 C++ and Python XTA API: the first char of the method names
		 must be changed from Uppercase to lowercase

2018-10-28 1.7.1 Python API for XTA
		 Both Python 2 and Python 3 can be used with XTA for Python.
		 Examples in doc/examples/xta/python tested with:
		 - Ubuntu 14.04
		   - MySQL      5.5.61
		   - PostgreSQL 9.3.24
		   - Python2    2.7.6
		   - Python3    3.4.3
		 - RHEL 7.5
		   - MariaDB    5.5.60
		   - PostgreSQL 9.2.4
		   - Python2    2.7.5

2018-09-17 1.7.0 C++ API for XTA

2018-05-27 1.6.0 First stable official version of XTA XA Transaction API
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.6.0 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch); LIXA_MSG_LEVEL=2.
		 Fixed a bug related to XTA, multiple applications, concurrent
		 branches in the event of state server crash during two phase
		 commit.
		 Removed persistency synchronization after xa_start: this
		 optimization halves the number of syncs and probably reduces
		 the latency introduced by LIXA.i
		 *** WARNING: *** in the event of transactional inconsistencies
		 please open an issue on GitHub
		 https://github.com/tiian/lixa/issues

20180413 - 1.5.3 XTA documentation: a dedicated chapter has been added in the
		 official LIXA manual

20180304 - 1.5.2 XTA support for concurrent branches
		 This release is *NOT* compatible with previous ones: you can't
		 mix 1.5.2 and previous versions in the same environment
		 (message LXC030E will be logged in the event of level
		 mismatch)

20171010 - 1.5.1 XTA support for "Suspend/Resume" pattern

20170921 - 1.5.0 Release of XTA API (XA Transaction API)