@@ -1,4 +1,5 @@
-Implement test cases of XTA for Java
+Implement test cases of XTA for Java:
+implement a program like case0101 in java and use LixaMonkeyXAResource
 
 test xa_forget
 test xa_recover
