@@ -10,7 +10,8 @@ liblixta_java_la_SOURCES = error_codes_jni.c transaction_manager_jni.c \
 dist_noinst_DATA = LixaErrorCodes.awk \
 	$(JAVA_PKGDIR)/Xta.java $(JAVA_PKGDIR)/XtaException.java \
 	$(JAVA_PKGDIR)/XtaXid.java $(JAVA_PKGDIR)/Transaction.java \
-	$(JAVA_PKGDIR)/TransactionManager.java
+	$(JAVA_PKGDIR)/TransactionManager.java \
+	$(JAVA_PKGDIR)/LixaMonkeyXAResource.java
 dist_noinst_HEADERS = transaction_jni.h xta_java_xa_resource.h \
 	xtaexception_jni.h xtaxid_jni.h
 
