@@ -15,6 +15,11 @@ LOG:
 		 This release breaks compatibility with previous versions of
 		 C++ and Python XTA API: the first char of the method names
 		 must be changed from Uppercase to lowercase
+		 *** WARNING: ***
+		 This release is *NOT* compatible with previous ones: you can't
+		 mix 1.7.2 and previous versions in the same environment
+		 (message LXC030E will be logged in the event of level
+		 mismatch); LIXA_MSG_LEVEL=3.
 
 2018-10-28 1.7.1 Python API for XTA
 		 Both Python 2 and Python 3 can be used with XTA for Python.
